# FlowerSimulation

./: Cargo.toml  README.md
.github/workflows/: gh-pages._yml  release.yml  wasm.yml
src/: constants.rs  egui_block_input.rs  flower.rs  main.rs  petal.rs  setup.rs  ui.rs
wasm/: index.html  style.css
