[package]
name = "Flower"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 's'
lto = "thin"

[dependencies]
bevy = { version = "0.13.2" }
bevy_egui = "0.27"
bevy_pancam = { version = "0.11.1", features = ["bevy_egui"] }
meval = "0.2"
bevy_vector_shapes = "0.7.0"
bevy-inspector-egui = "0.24"

[features]
block_input = ["bevy_pancam/bevy_egui"]